# wadalize

./: README.md  pyproject.toml
wadalize/: README.md  __init__.py  models.py  wadl.py
wadalize/scripts/: README.md  wadalize.py
wadalize/scripts/tests/: test_wadalize.py  test_wadalize_param_url.py  test_wadalize_representation.py
wadalize/tests/: test_wadl_handler.py  test_wadl_param.py  test_wadl_request.py
