[tool.poetry]
name = "wadalize"
version = "0.1.1"
description = "Class and script allowing to manipulate WADL files"
authors = ["Roberto Alamos <ralamosm@gmail.com>"]
readme = "README.md"
packages = [{include = "wadalize"}]


[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.31.0"
furl = "^2.1.3"
lxml = "^4.9.2"
exrex = "^0.11.0"
pydantic = "^2.4.2"
click-tools = {git = "https://github.com/ralamosm/click-tools.git"}


[tool.poetry.scripts]
wadalize = "wadalize.scripts.wadalize:run"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.3.1"
mock = "^5.0.2"
responses = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
